# PyShortTextCategorization-BERT

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: ci-tests.yml  publish-to-pypi.yml
docs/: conf.py  index.rst  tutorial.rst
src/shorttext_bert/: bertobj.py  encoder.py  scorer.py
test/: test_bertobj.py  test_encoder.py  test_fixtures.py  test_scorer.py
test/test_data/: sample_sentences.txt
