[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shorttext-bert"
version = "0.0.2a1"
authors = [
    {name = "Kwan Yuet Stephen Ho", email = "stephenhky@yahoo.com.hk"}
]
description = "Short Text Mining"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
keywords = ["shorttext", "natural language processing", "text mining", "BERT"]
requires-python = ">=3.9"
classifiers = [
      "Topic :: Scientific/Engineering :: Artificial Intelligence",
      "Topic :: Scientific/Engineering :: Mathematics",
      "Topic :: Text Processing :: Linguistic",
      "Topic :: Software Development :: Libraries :: Python Modules",
      "Programming Language :: Python :: 3.9",
      "Programming Language :: Python :: 3.10",
      "Programming Language :: Python :: 3.11",
      "Programming Language :: Python :: 3.12",
      "Natural Language :: English",
      "License :: OSI Approved :: MIT License",
      "Intended Audience :: Developers",
      "Intended Audience :: Education",
      "Intended Audience :: Information Technology",
      "Intended Audience :: Science/Research"
]
dependencies = [
    "numpy>=1.23.3",
    "transformers>=4.39.0",
    "torch>=2.0.0"
]

[project.urls]
Repository = "https://github.com/stephenhky/PyShortTextCategorization-BERT"
Issues = "https://github.com/stephenhky/PyShortTextCategorization-BERT/issues"
Documentation = "https://pyshorttextcategorization-bert.readthedocs.io/"

[tool.setuptools]
packages = ["shorttext_bert"]
zip-safe = false
package-dir = {"" = "src"}

[project.optional-dependencies]
test = ["unittest2", "pytest"]
